[gd_scene load_steps=5 format=3 uid="uid://dx4yt0dq6no0a"]

[ext_resource type="Script" uid="uid://tun06woibqjb" path="res://Scenes/Spells/FireBall.gd" id="1_17nat"]
[ext_resource type="Texture2D" uid="uid://n8euypubiapj" path="res://Sprites/fireBall.png" id="1_rd1pk"]
[ext_resource type="Script" uid="uid://bdesfsgvjkynn" path="res://Scenes/Spells/WallDetection.gd" id="2_a6ry2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_brnwg"]
height = 28.0

[node name="Area2D" type="Area2D"]
collision_layer = 128
collision_mask = 33
script = ExtResource("1_17nat")
fireBallAmount = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_brnwg")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_layer = 128
collision_mask = 33
script = ExtResource("2_a6ry2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(2, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_brnwg")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
texture_filter = 1
texture = ExtResource("1_rd1pk")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="Wall" from="CharacterBody2D" to="." method="_on_character_body_2d_wall"]
